# warframe-price-viewer

./: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: desktop-build.yml
docs/: api-research.md  architecture.md  licensing.md
license-server/: Cargo.toml  README.md
license-server/src/: main.rs
release-notes/: v1.7.1.md  v1.8.0.md  v1.8.1.md  v1.9.0.md
scripts/: generate-license.mjs  package-macos-dmg.sh  prepare-updater-release.mjs  setup-license-keys.mjs
src/: App.integration.test.tsx  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  license-public-key.txt  license-server-public-key.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/nsis/: installer.nsi
src/api/: client.ts  errors.ts  schemas.ts  warframeMarket.ts
src/components/: AppSidebar.tsx  BrandLogo.tsx
src/domain/: itemCategory.test.ts  itemCategory.ts  market.test.ts  market.ts  models.ts  search.test.ts  search.ts  transforms.ts
src/features/about/: AboutPanel.tsx
src/features/license/: LicenseGate.test.tsx  LicenseGate.tsx  api.ts  store.ts
src/features/market/: MetricCard.tsx  OrderFilters.tsx  OrderList.tsx  PriceHistoryChart.tsx  historyStore.ts
src/features/search/: ItemSearch.tsx
src/features/settings/: SettingsPanel.tsx  UpdateDialog.tsx  store.ts  useAppUpdater.ts  useCloseToTray.ts  useTheme.ts
src/lib/: clipboard.ts  config.ts  format.ts  hooks.ts  i18n.ts  notifications.ts  openExternal.ts
src/test/: setup.ts
src/test/fixtures/: api.ts
tests/e2e/: market.spec.ts
