[package]
name = "warframe-price-viewer"
version = "1.1.0"
description = "Warframe market price viewer"
authors = ["Warframe Price Viewer"]
edition = "2021"

[lib]
name = "warframe_price_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-opener = "2.5.4"
url = "2"
