[package]
name = "wfmarkettracker"
version = "1.8.0"
description = "Warframe market price tracker"
authors = ["WFMarketTracker"]
edition = "2021"

[lib]
name = "wfmarkettracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3.6.1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
ed25519-dalek = "2"
machine-uid = "0.6"
notify-rust = "4.18.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-opener = "2.5.4"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
url = "2"
